user page added

--- a/src/views/clinic-panel/partials/side-bar.ejs
+++ b/src/views/clinic-panel/partials/side-bar.ejs
@@ -32,7 +32,7 @@
     </li>
     <!--=====Rezervations=====-->
     <li class="nav-item">
-      <a class="nav-link" href="./answer-waiting-rezervations.html"> <img src="../clinic-panel/images/icons/Document.png" alt="Document Icon" /><span class="menu-title">Rezervasyonlar</span> </a>
+      <a class="nav-link" href="/panel/answer-waiting-rezervations"> <img src="../clinic-panel/images/icons/Document.png" alt="Document Icon" /><span class="menu-title">Rezervasyonlar</span> </a>
     </li>
     <!--=====Incoming Box=====-->
     <li class="nav-item">
