--- a/src/views/user/pages/clinic/appointment.ejs
+++ b/src/views/user/pages/clinic/appointment.ejs
@@ -212,10 +212,9 @@
           <img src="../user/img/clinic/centers/clinic-iii.png" class="clinic-center" alt="Clinic Center iii" />
           <div class="clinic-center-box-content">
             <div class="clinic-center-info">
-              <div class="title mb-2">Türkmed Diyaliz Merkezi</div>
+              <div class="title mb-2"><%- center.companyInformation.companyName  %> </div>
               <div class="text">
-                Abdurrahmangazi, Semerkant Sk. <br />
-                No:8/A, 34920 Sultanbeyli/İstanbul
+                <%- center.adress.adressDetailText  %> 
               </div>
             </div>
             <div class="clinic-center-points">
@@ -282,42 +281,43 @@
                 <label for="situation">Hepatit Marker Durumunuzu Belirtiniz <span class="mandatory"> *</span></label>
                 <input type="text" name="situation" class="form-control" id="situation" placeholder="Hepatit Marker Durumunuz" />
               </div>
-              <div class="form-group" name="insurance">
+              SİGORTA DUZENLENECEK....
+              <div class="form-group">
                 <label>Diyalize Girecek Kişinin Sigorta Durumu <span class="mandatory">*</span></label>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="SSK" />
                   <label class="form-check-label" for="exampleRadio1">SSK</label>
                 </div>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="Yeşilkart Sigortalısı" />
                   <label class="form-check-label" for="exampleRadio1">Yeşilkart Sigortalısı</label>
                 </div>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="Banka Sigortalısı" />
                   <label class="form-check-label" for="exampleRadio1">Banka Sigortalısı</label>
                 </div>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="Yurtdışı Sigortalısı" />
                   <label class="form-check-label" for="exampleRadio1">Yurtdışı Sigortalısı</label>
                 </div>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="Özel Sigortalı" />
                   <label class="form-check-label" for="exampleRadio1">Özel Sigortalı </label>
                 </div>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="EHIC (Europan Health Insurance Card)" />
                   <label class="form-check-label" for="exampleRadio1">EHIC (Europan Health Insurance Card) </label>
                 </div>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="Global Health Insurance Card (GHIC)" />
                   <label class="form-check-label" for="exampleRadio1">Global Health Insurance Card (GHIC) </label>
                 </div>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="Sigortam Yok/Kendim Ödeyeceğim" />
                   <label class="form-check-label" for="exampleRadio1">Sigortam Yok/Kendim Ödeyeceğim </label>
                 </div>
                 <div class="form-group not-border checkbox form-check">
-                  <input type="radio" name="radios insurance" class="form-check-input" id="exampleRadio1" />
+                  <input type="radio" name="insurance" class="form-check-input" id="exampleRadio1" value="Diğer" />
                   <label class="form-check-label" for="exampleRadio1">Diğer</label>
                 </div>
               </div>
@@ -348,8 +348,8 @@
               <div class="clinic-form-title mb-2">Özel İstekleriniz</div>
               <div class="clinic-form-text">Özel istekler garanti edilemez, ancak merkez ihtiyaçlarınızı karşılamak için elinden geleni yapacaktır. Rezervasyonunuz tamamlandıktan sonra da her zaman özel talepte bulunabilirsiniz.</div>
               <div class="clinic-form-inner-box wide">
-                <div class="form-group" id="desc" name="desc">
-                  <textarea class="form-control" id="message" rows="5" placeholder="Merkezinde ki sessiz odalardan birisinde tedavimi görmek istiyorum. Migren sorunum olduğu için yüksek sesli ortamlarda problem yaşamaktayım bu konuda bana yardımcı olabilir misiniz?"></textarea>
+                <div class="form-group" id="desc" >
+                  <textarea class="form-control" id="note" rows="5" name="note" placeholder="Merkezinde ki sessiz odalardan birisinde tedavimi görmek istiyorum. Migren sorunum olduğu için yüksek sesli ortamlarda problem yaşamaktayım bu konuda bana yardımcı olabilir misiniz?"></textarea>
                 </div>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 tm-button-next">
