--- a/src/views/user/partials/top-navbar-dark.ejs
+++ b/src/views/user/partials/top-navbar-dark.ejs
@@ -2,8 +2,8 @@
   <!-- Top Navbar -->
   <div class="container">
     <div class="row">
-      <nav class="navbar navbar-expand-lg narbar-light mt-3 mb-3">
-        <a class="navbar-brand logo mb-2" href="/"> Dialysing<span>.com</span></a>
+      <nav class="navbar navbar-expand-lg narbar-light">
+        <a class="navbar-brand logo mb-3 mt-3" href="/"> Dialysing<span>.com</span></a>
         <a href="#" class="location mx-1"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i> <span id="location"></span></a>
         <!-- Location Modal -->
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -63,7 +63,7 @@
         </button>
         <div id="mainNav" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item language-selection mb-3">
+            <li class="nav-item language-selection mb-3 mt-3">
               <img src="../user/img/flags/turkey.png" alt="Flags Turkey" />
               <div class="tm-form-element tm-form-element-2">
                 <select name="language" class="form-control tm-select" id="language">
@@ -73,16 +73,16 @@
                 </select>
               </div>
             </li>
-            <li class="nav-item question mb-3">
+            <li class="nav-item question mb-3 mt-3">
               <img src="../user/img/icons/question.png" alt="Icons Question" />
             </li>
-            <li class="nav-item buttons mb-3">
+            <li class="nav-item buttons mb-3 mt-3">
               <a href="/clinic" class="nav-link btn-third">Merkezinizi Ekleyin</a>
             </li>
-            <li class="nav-item buttons mb-3">
+            <li class="nav-item buttons mb-3 mt-3">
               <a href="#" class="nav-link btn-second">Kayıt Ol</a>
             </li>
-            <li class="nav-item buttons mb-3">
+            <li class="nav-item buttons mb-3 mt-3">
               <!-- Button trigger modal -->
               <button type="button" class="nav-link btn-second" data-toggle="modal" data-target="#loginModal">Giriş Yap</button>
 
