--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -65,7 +65,8 @@
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
         <div class="tm-box">
-          <a href="./articles/diyaliz-nedir.html"><img src="../user/img/custom/dialysis-i.png" alt="Dialysis I" /></a>
+          <a href="#">
+            <img src="../user/img/custom/dialysis-i.png" alt="Dialysis I" /></a>
           <div class="tm-box-content">
             <div key="articleSubTitle1" class="tm-box-title">Diyaliz Nedir?</div>
             <div key="articlesSubText1" class="tm-box-text">Fermentum tristique egestas elit nulla morbi integer rhoncus quis in quam quis purus eu posuere dui scelerisque urna, turpis senectus</div>
@@ -101,7 +102,7 @@
       </div>
       <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
         <div class="tm-box">
-          <a href="./GFR-calculation.html"><img src="../user/img/custom/dialysis-v.png" alt="Dialysis V" /></a>
+          <a href="/blogs/<%- blog.seflink  %> "><img src="../user/img/custom/dialysis-v.png" alt="Dialysis V" /></a>
           <div class="tm-box-content">
             <div key="articleSubTitle5" class="tm-box-title">GFR Hesaplama</div>
             <div key="articlesSubText5" class="tm-box-text">Eget ut netus aliquet platea auctor volutpat est dictum mattis ac enim eget duis sit a, ac urna, tortor tincidunt mauris adipiscing facilisis ultricies aliquet sit imperdiet non sed lectus</div>
