--- a/src/views/user/partials/footer.ejs
+++ b/src/views/user/partials/footer.ejs
@@ -3,7 +3,7 @@
     <div class="row pt-5">
       <div class="col-lg-3 mb-5">
         <h5>
-          <a class="f-el tm-margin-b-1 mr-auto logo logo-footer tm-color-white" href="./index.html">Dialysing<span>.com</span></a>
+          <a class="f-el tm-margin-b-1 mr-auto logo logo-footer tm-color-white" href="/">Dialysing<span>.com</span></a>
         </h5>
         <ul class="nav flex-column">
           <li key="footerTitle" class="nav-item mb-2">Eleifend eleifend vel lobortis arcu quam mattis sodales turpis ornare at dictumst in</li>
