--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
         <nav class="navbar navbar-expand-lg narbar-light mt-5">
-          <a class="navbar-brand logo mt-2 mb-3" href="#">Dialysing<span>.com</span></a>
+          <a class="navbar-brand logo mt-2 mb-3" href="/">Dialysing<span>.com</span></a>
           <a href="#" class="location mx-1"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i> <span id="location"></span></a>
           <!-- Location Modal -->
           <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
