--- a/src/views/user/partials/top-navbar-blog.ejs
+++ b/src/views/user/partials/top-navbar-blog.ejs
@@ -3,7 +3,7 @@
             <div class="container">
                 <div class="row">
                     <nav class="navbar navbar-expand-lg narbar-light mt-3">
-                        <a class="navbar-brand logo mb-2" href="../user/index.html">Dialysing<span>.com</span></a>
+                        <a class="navbar-brand logo mb-2" href="/">Dialysing<span>.com</span></a>
                         <div class="navbar-nav">
                             <a href="#" class="location"><i class="bi bi-geo-alt-fill mx-2"></i><span>İstanbul, Türkiye</span></a>
                         </div>
