--- a/public/user/css/clinic/clinic.css
+++ b/public/user/css/clinic/clinic.css
@@ -40,12 +40,16 @@
   width: 80%;
 }
 
-.clinic-header .inner-content .tm-header-title {
-  font-size: 28px;
+.clinic-header .tm-header-title {
+  font-size: 25px;
+  font-family: 'Lato', sans-serif;
+  line-height: 3rem;
 }
 
-.clinic-header .inner-content .tm-header-text {
-  font-size: 20px;
+.clinic-header .tm-header-text {
+  font-size: 15px;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 2rem;
 }
 
 .clinic-header .inner-content .tm-header-bottom {
@@ -56,14 +60,21 @@
   padding-left: 5rem;
   padding-right: 5rem;
 }
-
+/*clinic img*/
 .clinic-header .clinic-img {
   position: relative;
-  top: 2%;
-  right: 200%;
+  /* top: 2%; */
+  right: 50%; 
   width: initial;
+  margin: 0;
+  padding: 0;
 }
-
+.banner img {
+  width: 450px;
+  height: 450px;
+  margin: 0px;
+  padding: 0px;
+}
 .clinic-header .btn-second {
   width: 400px;
 }
@@ -731,18 +742,31 @@ a.clinic-images div {
   height: 50px;
 }
 @media screen and (max-width: 991px) {
-  .clinic-header .inner-content .tm-header-title {
-    font-size: 24px;
+  .clinic-header .tm-header-title {
+    font-size: 28px;
+    margin-top: 60px;
+    text-align: center;
   }
-  .clinic-header .inner-content .tm-header-text {
+  .clinic-header .tm-header-text {
     font-size: 18px;
+    margin-top: 30px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
   }
-
+  .btn-second {
+    margin-top: 30px;  
+    width: 100% !important;
+  }
+  .clinic-header button {
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  display: flex; 
+}
   .clinic-header .clinic-img {
     width: 100%;
     height: 100%;
-    top: 20%;
-    right: 0;
+    /* top: 20%; */  
   }
 
   .tm-clinic-box img {
@@ -843,4 +867,4 @@ a.clinic-images div {
   .clinic-form-inner-box {
     width: 100%;
   }
-}
+} 
