--- a/public/user/css/clinic/style.css
+++ b/public/user/css/clinic/style.css
@@ -778,23 +778,20 @@ p {
   border: 2px solid #055f8f;
   font-size: 12px !important; 
   font-family: 'Montserrat', sans-serif;
-}
-
+  text-decoration: none;
+} 
 .btn-second.wide {
   width: 100%;
 }
-
 .btn-second.small {
   padding: 0.3rem 1.5rem;
   font-size: 14px;
   margin: 1rem 0;
 }
-
 .btn-second.small img {
   width: 20px;
   height: 20px;
 }
-
 .btn-second.linkedin {
   background-color: #046592;
   border-color: #046592;
