--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -8,151 +8,153 @@
 
 <div class="tm-main-content" id="top">
   <!--======= HEADER  =====-->
-  <div class="tm-section tm-bg-background clinic-header" id="tm-section-1">
+  <div class="tm-section tm-bg-background clinic-header pb-5" id="tm-section-1">
     <div class="ie-container-width-fix-2">
-      <div class="container ie-h-align-center-fix">
+      <div class="container ie-h-align-center-fix"> 
         <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 ie-container-width-fix text-left tm-header-content">
-            <div class="inner-content">
-              <div class="tm-header-title">Ücretsiz olarak kliniğinizi sistemimize dahil ederek bizler ile çalışmak ister misiniz?</div>
+          <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 ie-container-width-fix text-left tm-header-content">
+            <!-- <div class="inner-content"> -->
+              <div class="tm-header-title mt-5">Ücretsiz olarak kliniğinizi sistemimize dahil ederek bizler ile çalışmak ister misiniz?</div>
               <div class="tm-header-text">Sizlerde kliniğinizi sistemimize dahil ederek Dialysing.com ailesine katılıp, hastalarınıza direkt hizmet vermeye başlayabilirsiniz.</div>
-              <div class="tm-header-bottom"><a href="/panel/choose-personel" class="btn-second">Merkezinizi Ekleyin</a></div>
-            </div>
+              <button href="/panel/choose-personel" class="btn-second">Merkezinizi Ekleyin</button>
+            </div> 
+          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 banner ie-container-width-fix text-right tm-header-content">
+            <img src="../user/img/clinic/Laptop.png" class="clinic-img d-none d-lg-block" alt="Laptop" />
           </div>
-          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 ie-container-width-fix text-right tm-header-content">
-            <img src="../user/img/clinic/Laptop.png" class="clinic-img" alt="Laptop" />
-          </div>
-        </div>
+        </div>  
       </div>
     </div>
   </div>
 
-  <!--======= CLINIC =====-->
-  <div id="section-i" class="tm-bg-white tm-pt-20 tm-pb-10">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <div class="tm-section-title">Merkezimi Neden Dialysingte Listelemeliyim?</div>
-          <div class="clinic-content">
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/visibility.png" alt="Visibility Icon" />
-              </div>
-              <div class="clinic-text">Yüzlerce ülkeden uluslararası tatil diyalizi hastalara çevrimiçi görünürlük ve erişim imkanı</div>
-            </div>
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/profile.png" alt="Profile Icon" />
-              </div>
-              <div class="clinic-text">En çok görüntülenen diyaliz merkezlerinin bulunduğu güvenilir platformda kişisel merkez profili</div>
-            </div>
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/language.png" alt="Visibility Icon" />
-              </div>
-              <div class="clinic-text">Birçok dilde hizmet sunan platformda global olarak hastalarınıza direk randevu imkanı</div>
-            </div>
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/picture.png" alt="Visibility Icon" />
-              </div>
-              <div class="clinic-text">Merkezinize özel tanıtım sayfanınızı dilediğiniz gibi düzenleyebilme ve ekstra fotoğraflar ekleyebilme imkanı</div>
-            </div>
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/attachment.png" alt="Visibility Icon" />
-              </div>
-              <div class="clinic-text">Merkezinize gelecek hastaların diyaliz sürecine kolayca karar verebilmeniz adına özenle düşünülerek belirlenmiş hasta bilgilerine ulaşım imkanı</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <!--======= DOCTORS =====-->
-  <div id="section-ii" class="tm-p-10">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <div class="tm-clinic-box">
-            <div class="row">
-              <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
-                <img src="../user/img/clinic/zeki-malkoc.png" alt="Zeki Malkoc" />
+        <!--======= CLINIC =====-->
+        <div id="section-i" class="tm-bg-white tm-pt-20 tm-pb-10 mt-5 my-5 py-5 pt-5">
+          <div class="container">
+              <div class="row">
+                  <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 p-5 mt-5">
+                      <div class="tm-section-title">Merkezimi Neden Dialysing.com'da Listelemeliyim?</div>
+                      <div class="clinic-content">
+                          <div class="clinic-icon">
+                              <div class="clinic-image">
+                                  <img src="../user/img/clinic/icons/visibility.png" alt="Visibility Icon" />
+                              </div>
+                              <div class="clinic-text">Yüzlerce ülkeden uluslararası tatil diyalizi hastalara çevrimiçi görünürlük ve erişim imkanı</div>
+                          </div>
+                          <div class="clinic-icon">
+                              <div class="clinic-image">
+                                  <img src="../user/img/clinic/icons/profile.png" alt="Profile Icon" />
+                              </div>
+                              <div class="clinic-text">En çok görüntülenen diyaliz merkezlerinin bulunduğu güvenilir platformda kişisel merkez profili</div>
+                          </div>
+                          <div class="clinic-icon">
+                              <div class="clinic-image">
+                                  <img src="../user/img/clinic/icons/language.png" alt="Visibility Icon" />
+                              </div>
+                              <div class="clinic-text">Birçok dilde hizmet sunan platformda global olarak hastalarınıza direk randevu imkanı</div>
+                          </div>
+                          <div class="clinic-icon">
+                              <div class="clinic-image">
+                                  <img src="../user/img/clinic/icons/picture.png" alt="Visibility Icon" />
+                              </div>
+                              <div class="clinic-text">Merkezinize özel tanıtım sayfanınızı dilediğiniz gibi düzenleyebilme ve ekstra fotoğraflar ekleyebilme imkanı</div>
+                          </div>
+                          <div class="clinic-icon">
+                              <div class="clinic-image">
+                                  <img src="../user/img/clinic/icons/attachment.png" alt="Visibility Icon" />
+                              </div>
+                              <div class="clinic-text">Merkezinize gelecek hastaların diyaliz sürecine kolayca karar verebilmeniz adına özenle düşünülerek belirlenmiş hasta bilgilerine ulaşım imkanı</div>
+                          </div>
+                      </div>
+                  </div>
               </div>
-              <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-clinic-box-content">
-                <div class="tm-clinic-box-title">“Mauris proin purus a, aliquet nibh quis et felis cras enim orci diam amet dictum id amet dignissim urna est risus cursus massa nibh odio”</div>
-                <div class="tm-clinic-box-inner">
-                  <div class="tm-clinic-box-title">Dr. M. Zeki Malkoç</div>
-                  <div class="tm-clinic-box-text">Bodrum Diyaliz Merkezi</div>
-                </div>
-              </div>
-            </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <div class="tm-clinic-box">
-            <div class="row">
-              <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
-                <img src="../user/img/clinic/bunyamin-altundal.png" alt="Bunyamin Altundal" />
-              </div>
-              <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-clinic-box-content">
-                <div class="tm-clinic-box-title">“Mauris proin purus a, aliquet nibh quis et felis cras enim orci diam amet dictum id amet dignissim urna est risus cursus massa nibh odio”</div>
-                <div class="tm-clinic-box-inner">
-                  <div class="tm-clinic-box-title">Bünyamin Altundal</div>
-                  <div class="tm-clinic-box-text">Diyamer, Bağımsız Diyaliz Merkezleri Derneği, YK Başkanı</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-    </div>
-  </div>
 
-  <!--======= GROW =====-->
-  <div id="section-iii" class="tm-p">
-    <div class="container">
-      <div class="row">
-        <div class="col text-center">
-          <h2 class="tm-section-title">Güveninizle büyüyoruz!</h2>
-          <p class="tm-text">
-            40+ ülkede yer alan 10000’nin üzerinde diyaliz merkezi ve kliniğinde, 20+ dilde hizmet alarak kolayca ve güvenli şekilde diyaliz rezervasyonunuzu <span class="logo">Dialysing<span class="com">.com</span></span> ile yapabilirsiniz
-          </p>
-          <div class="tm-center">
-            <div class="circle-content">
-              <div class="circle">
-                <img src="../user/img/icons/map.png" alt="Icon Map" />
+        <!--======= DOCTORS =====-->
+        <div id="section-ii" class="tm-p-10">
+          <div class="container">
+              <div class="row">
+                  <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                      <div class="tm-clinic-box">
+                          <div class="row">
+                              <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
+                                  <img src="../user/img/clinic/zeki-malkoc.png" alt="Zeki Malkoc" />
+                              </div>
+                              <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-clinic-box-content">
+                                  <div class="tm-clinic-box-title mx-3">“Mauris proin purus a, aliquet nibh quis et felis cras enim orci diam amet dictum id amet dignissim urna est risus cursus massa nibh odio”</div>
+                                  <div class="tm-clinic-box-inner">
+                                      <div class="tm-clinic-box-title mx-3">Dr. M. Zeki Malkoç</div>
+                                      <div class="tm-clinic-box-text mx-3">Bodrum Diyaliz Merkezi</div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                      <div class="tm-clinic-box">
+                          <div class="row">
+                              <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
+                                  <img src="../user/img/clinic/bunyamin-altundal.png" alt="Bunyamin Altundal" />
+                              </div>
+                              <div class="col-sm-12 col-md-12 col-lg-7 col-xl-7 tm-clinic-box-content">
+                                  <div class="tm-clinic-box-title mx-3">“Mauris proin purus a, aliquet nibh quis et felis cras enim orci diam amet dictum id amet dignissim urna est risus cursus massa nibh odio”</div>
+                                  <div class="tm-clinic-box-inner">
+                                      <div class="tm-clinic-box-title mx-3">Bünyamin Altundal</div>
+                                  <div class="tm-clinic-box-text mx-3">Diyamer, Bağımsız Diyaliz Merkezleri Derneği, YK Başkanı</div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
               </div>
-              <div class="clinic-number">40+</div>
-              <div class="clinic-prop">Ülke</div>
-            </div>
-            <div class="circle-content">
-              <div class="circle">
-                <img src="../user/img/icons/language.png" alt="Icon Language" />
-              </div>
-              <div class="clinic-number">20+</div>
-              <div class="clinic-prop">Dil</div>
-            </div>
-            <div class="circle-content">
-              <div class="circle">
-                <img src="../user/img/icons/hospital.png" alt="Icon Hospital" />
-              </div>
-              <div class="clinic-number">10+</div>
-              <div class="clinic-prop">Klinik</div>
-            </div>
-            <div class="circle-content">
-              <div class="circle">
-                <img src="../user/img/icons/hospital-2.png" alt="Icon Hospital 2" />
-              </div>
-              <div class="clinic-number">12</div>
-              <div class="clinic-prop">Derkenk</div>
-            </div>
           </div>
-        </div>
       </div>
-    </div>
-  </div>
+
+        <!--======= GROW =====-->
+        <div id="section-iii" class="tm-p my-5 py-5">
+          <div class="container">
+              <div class="row">
+                  <div class="col text-center">
+                      <h2 class="tm-section-title">Güveninizle büyüyoruz!</h2>
+                      <p class="tm-text">
+                          40+ ülkede yer alan 10000’nin üzerinde diyaliz merkezi ve
+                          kliniğinde, 20+ dilde hizmet alarak kolayca ve güvenli şekilde
+                          diyaliz rezervasyonunuzu <span class="logo">Dialysing<span class="com">.com</span></span> ile yapabilirsiniz
+                      </p>
+                      <div class="tm-center">
+                          <div class="circle-content">
+                              <div class="circle">
+                                  <img src="../user/img/icons/map.png" alt="Icon Map" />
+                              </div>
+                              <div class="clinic-number">40+</div>
+                              <div class="clinic-prop">Ülke</div>
+                          </div>
+                          <div class="circle-content">
+                              <div class="circle">
+                                  <img src="../user/img/icons/language.png" alt="Icon Language" />
+                              </div>
+                              <div class="clinic-number">20+</div>
+                              <div class="clinic-prop">Dil</div>
+                          </div>
+                          <div class="circle-content">
+                              <div class="circle">
+                                  <img src="../user/img/icons/hospital.png" alt="Icon Hospital" />
+                              </div>
+                              <div class="clinic-number">10+</div>
+                              <div class="clinic-prop">Klinik</div>
+                          </div>
+                          <div class="circle-content">
+                              <div class="circle">
+                                  <img src="../user/img/icons/hospital-2.png" alt="Icon Hospital 2" />
+                              </div>
+                              <div class="clinic-number">12</div>
+                              <div class="clinic-prop">Dernek</div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
 
   <!-- ======FAQ====== -->
   <div id="section-iv" class="tm-p">
