--- a/src/views/user/partials/navbar.ejs
+++ b/src/views/user/partials/navbar.ejs
@@ -78,7 +78,7 @@
               <div>Klinik Hesabınız Var Mı?</div>
             </li>
             <li class="nav-item">
-              <a href="./clinic-login.html" class="nav-link btn-third">Giriş Yap</a>
+              <a href="/panel/choose-personel" class="nav-link btn-third">Giriş Yap</a>
             </li>
           </ul>
         </div>
