fixed design clinic index banner

--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -25,46 +25,9 @@
       </div>
     </div>
   </div>
-
-<<<<<<< HEAD
-  <!--======= CLINIC =====-->
-  <div id="section-i" class="tm-bg-white tm-pt-20 tm-pb-10 my-5 py-5 mt-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <div class="tm-section-title">Merkezimi Neden Dialysingte Listelemeliyim?</div>
-          <div class="clinic-content">
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/visibility.png" alt="Visibility Icon" />
-              </div>
-              <div class="clinic-text">Yüzlerce ülkeden uluslararası tatil diyalizi hastalara çevrimiçi görünürlük ve erişim imkanı</div>
-            </div>
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/profile.png" alt="Profile Icon" />
-              </div>
-              <div class="clinic-text">En çok görüntülenen diyaliz merkezlerinin bulunduğu güvenilir platformda kişisel merkez profili</div>
-            </div>
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/language.png" alt="Visibility Icon" />
-              </div>
-              <div class="clinic-text">Birçok dilde hizmet sunan platformda global olarak hastalarınıza direk randevu imkanı</div>
-            </div>
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/picture.png" alt="Visibility Icon" />
-              </div>
-              <div class="clinic-text">Merkezinize özel tanıtım sayfanınızı dilediğiniz gibi düzenleyebilme ve ekstra fotoğraflar ekleyebilme imkanı</div>
-            </div>
-            <div class="clinic-icon">
-              <div class="clinic-image">
-                <img src="../user/img/clinic/icons/attachment.png" alt="Visibility Icon" />
-=======
-
+ 
         <!--======= CLINIC =====-->
-        <div id="section-i" class="tm-bg-white tm-pt-20 tm-pb-10 mt-5 my-5 py-5 pt-5">
+        <div id="section-i" class="tm-bg-white tm-pt-20 tm-pb-10 m-0">
           <div class="container">
               <div class="row">
                   <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 p-5 mt-5">
@@ -101,8 +64,7 @@
                               <div class="clinic-text">Merkezinize gelecek hastaların diyaliz sürecine kolayca karar verebilmeniz adına özenle düşünülerek belirlenmiş hasta bilgilerine ulaşım imkanı</div>
                           </div>
                       </div>
-                  </div>
->>>>>>> main
+                  </div> 
               </div>
           </div>
       </div>
