--- a/src/views/clinic-panel/pages/panel/completed-rezervations.ejs
+++ b/src/views/clinic-panel/pages/panel/completed-rezervations.ejs
@@ -7,41 +7,42 @@
           <form class="tm-form-wide accordion">
             <div class="tm-steps">
               <ul class="flex-column flex-md-row d-flex tabbar">
-                <a class="flex-sm-fill text-md-center nav-link mb-2" href="answer-waiting-rezervations.html">Cevap Bekleyen Rezervasyonlar</a>
-                <a class="flex-sm-fill text-md-center nav-link mb-2" href="./oncoming-rezervations.html">Yaklaşan Rezervasyonlar</a>
-                <a class="flex-sm-fill text-md-center nav-link mb-2 active" aria-current="page" href="./completed-rezervations.html"
-                  >Tamamlanan Rezervasyonlar
+                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/answer-waiting-rezervations">Cevap Bekleyen Rezervasyonlar</a>
+                <a class="flex-sm-fill text-md-center nav-link mb-2 active" aria-current="page" href="/panel/oncoming-rezervations"
+                  >Yaklaşan Rezervasyonlar
                   <div class="tm-s-step active completed"></div
                 ></a>
-                <a class="flex-sm-fill text-md-center nav-link mb-2" href="./canceled-rezervations.html">İptal Olan Rezervasyonlar</a>
+                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/completed-rezervations">Tamamlanan Rezervasyonlar</a>
+                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/canceled-rezervations">İptal Olan Rezervasyonlar</a>
               </ul>
             </div>
+            <% appointments.forEach(appointment => { %>
             <div class="accordion accordion-flush" id="rezervationMessage1">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    <div class="tm-display-flex tm-space-between tm-width-100">
+                    <div class="tm-space-between tm-width-100">
                       <div>
-                        <div class="admin-box-title">Ayhan Fırat Fındıkoğlu</div>
+                        <div class="admin-box-title"><%- appointment.patientNameSurname %></div>
                         <div class="tm-space-between tm-flex-align-baseline mobile">
-                          <div class="admin-box-text">Hemodiyaliz</div>
+                          <div class="admin-box-text"><%- appointment.treatmentMethod %></div>
                           <div class="admin-box-text">
                             <table class="mobile-table">
                               <tr>
-                                <th><span>ayhanf.f2@gmail.com</span></th>
-                                <th><span>+90 539 960 13 93</span></th>
+                                <th><span><%- appointment.email %> </span></th>
+                                <th><span><%- appointment.phone %> </span></th>
                               </tr>
                               <tr>
-                                <td><span>USA, New York, 21. Street</span></td>
-                                <td><span>Yeşil Kart Sigortalı</span></td>
+                                <td><span><%- appointment.adress.adressDetailText %></span></td>
+                                <td><span><%- appointment.insurance %></span></td>
                               </tr>
                             </table>
                           </div>
                         </div>
                       </div>
                       <div class="right">
-                        <div class="admin-box-text">15 Eylül 2021</div>
-                        <div class="admin-box-text">15:30</div>
+                        <div class="admin-box-text"><%- appointment.checkInDate.toJSON().slice(0,10) %></div>
+                        <div class="admin-box-text"><%- appointment.situation %></div>
                       </div>
                     </div>
                   </button>
@@ -50,65 +51,17 @@
                   <div class="accordion-body">
                     <div class="form-group">
                       <label for="center-about">Özel Notlar</label>
-                      <textarea class="form-control" id="center-about" rows="3" placeholder="Morbi euismod cras rhoncus eget laoreet et ridiculus metus, mi arcu ultricies id libero dictum commodo eleifend aenean scelerisque purus orci penatibus senectus elit mattis tristique lectus sed egestas risus enim pulvinar feugiat egestas nam urna pellentesque adipiscing egestas eu"></textarea>
+                      <textarea class="form-control" id="center-about" rows="3" placeholder="<%- appointment.note  %>" disabled></textarea>
                     </div>
-                    <div class="warning">Tatil Diyalizi Rezervasyonudur.</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="accordion accordion-flush" id="rezervationMessage2">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    <div class="tm-display-flex tm-space-between tm-width-100">
-                      <div>
-                        <div class="admin-box-title">Atakan Kantarcı</div>
-                        <div class="admin-box-text">Hemodiyaliz</div>
-                      </div>
-                      <div class="right">
-                        <div class="admin-box-text">15 Eylül 2021</div>
-                        <div class="admin-box-text">18:00</div>
-                      </div>
-                    </div>
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#rezervationMessage2">
-                  <div class="accordion-body">
-                    <div class="form-group">
-                      <label for="center-about">Özel Notlar</label>
-                      <textarea class="form-control" id="center-about" rows="3" placeholder="Morbi euismod cras rhoncus eget laoreet et ridiculus metus, mi arcu ultricies id libero dictum commodo eleifend aenean scelerisque purus orci penatibus senectus elit mattis tristique lectus sed egestas risus enim pulvinar feugiat egestas nam urna pellentesque adipiscing egestas eu"></textarea>
+                    <div class="tm-space-between">
+                      <!-- <div class="warning left">Tatil Diyalizi Rezervasyonudur.</div> -->
+
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="accordion accordion-flush" id="rezervationMessage3">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    <div class="tm-display-flex tm-space-between tm-width-100">
-                      <div>
-                        <div class="admin-box-title">Jane Cooper<span>Tatil Diyalizi</span></div>
-                        <div class="admin-box-text">Hemodiyaliz</div>
-                      </div>
-                      <div class="right">
-                        <div class="admin-box-text">15 Eylül 2021</div>
-                        <div class="admin-box-text">18:00</div>
-                      </div>
-                    </div>
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#rezervationMessage3">
-                  <div class="accordion-body">
-                    <div class="form-group">
-                      <label for="center-about">Özel Notlar</label>
-                      <textarea class="form-control" id="center-about" rows="3" placeholder="Morbi euismod cras rhoncus eget laoreet et ridiculus metus, mi arcu ultricies id libero dictum commodo eleifend aenean scelerisque purus orci penatibus senectus elit mattis tristique lectus sed egestas risus enim pulvinar feugiat egestas nam urna pellentesque adipiscing egestas eu"></textarea>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <% }) %>
           </form>
         </div>
       </div>
